# ComputerGraphics_Studies

./: .gitignore  CMakeLists.txt  README.md
Diagrams/: Diagrama1.dia
OpenGL/00_app_framework/: main.cpp
OpenGL/01_plain_triangle/: main.cpp
OpenGL/02_plain_colored_triangle/: main.cpp
OpenGL/07_indexed_cube/: main.cpp
OpenGL/15_specular_lighting/: main.cpp
Shaders/: color_triang.frag  color_triang.vert  color_triang_f.spv  color_triang_v.spv  pixel1.glsl  triang.frag  triang.vert  triang_v.spv  vertex1.glsl
Vulkan/: MyExtensions
Vulkan/00_app_framework/: main.cpp
Vulkan/01_plain_triangle/: main.cpp
Vulkan/02_plain_color_triangle/: main.cpp
Vulkan/02_plain_colored_triangle/: main.cpp
Vulkan/04_textures/: main.cpp
Vulkan/09_matrices_and_transformations/: main.cpp
Vulkan/13_ambient_lighting/: main.cpp
utils/: loadShader.cpp  loadShader.hpp  optional.hpp
